Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27406

Dependant project isn't rebuilt after dependency project is deployed

    XMLWordPrintable

Details

    • Linux/X11
    • d79d4f252 (master)

    Description

      I attach a video that shows the issue. A brief description of the content of the video is below.

      I am working in a session with three projects that depend on each other. The dependency looks like this:

          DOLFINX -> FLUIDIX -> movingMesh

      where the arrow points from a dependency project to its dependant.

       

      The movingMesh project uses a header, `NavierStokesSolver.h`, provided by FLUIDIX, to compile the file `squeeze.cpp`.

      In the video I show that if I modify `NavierStokesSolver.h`, then deploy FLUIDIX, then build movingMesh, `squeeze.cpp` is recompiled, as it should.
      However, if I modify `NavierStokesSolver.h` again and I use the "Run" button directly, FLUIDIX is compiled and deployed but movingMesh is not recompiled, which is wrong.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-27406
          # Subject Branch Project Status CR V

          Activity

            People

              kandeler Christian Kandeler
              mleoni Massimiliano Leoni
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes