ProjectExplorer: Optionally deploy dependent projects

... rather than just building them.

Fixes: QTCREATORBUG-27406
Change-Id: I5ddbb9ee4a05c6843bd78cf01746c57c6cacda3c
Reviewed-by: Christian Stenger <christian.stenger@qt.io>